--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
-  <title>Web前端导航 - Flynn</title>
-  <meta name="Keywords" content="Web前端导航,前端框架,开发平台,构建工具,公众号,前端大牛,类库框架,linxins.com">
+  <title>Web前端导航 -xueyes</title>
+  <meta name="Keywords" content="Web前端导航,前端框架,开发平台,构建工具,公众号,前端大牛,类库框架,https://xueyes.github.io/qianduan/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <link rel="stylesheet" href="static/css/index.css">
   <link rel="stylesheet" type="text/css" href="static/css/iconfont.css">
